[project]
name = "api"
version = "0.1.0"
description = "Voise FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "numpy>=1.24.0",
    "anthropic>=0.107.1",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "openai>=2.41.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "ruff>=0.15.16",
    "sqlalchemy>=2.0.50",
    "stripe>=15.2.0",
    "uvicorn[standard]>=0.49.0",
    "spacy>=3.7.0",
    "lexical-diversity>=0.1.1",
    "onnxruntime>=1.19.0",
    "optimum>=1.23.0",
    "pypdf>=4.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["config", "auth", "db", "models", "routers", "schemas", "services"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
